# hmtc

./: .gitignore  Dockerfile  FILE.xml  Makefile  \\wsl.localhost\Ubuntu-22.04\home\matt\programming\hmtc\hmtc\utils\cookies.txt  atlas (production).session.sql  chapters.txt  cronus (docker).session.sql  deploy.txt  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  hello.py  oldDockerfile  pyproject.toml  records  requirements.txt  sol.py  test.db  test.sqlite
.devcontainer/: devcontainer.json
DOWNLOAD/: 20240426___xIEkTqXkaOY.en.vtt
archive/: .env.developmentasdf  .env.staging  .env.testing  01-oldhome.py  20-channels.py  23-channel_detail.py  31-oldplaylists.py  44-old_video_sections.py  91-old_playlists.py  93-videos.py  94-sandboxpopup.py  98-sandbox.old  AppBar.vue  app.pyold  app_bar.py  app_bar.vue  archive.py  asdf.py  asdfasdftasks.py  asdfasdfvlc_functions.py  asdfdatabase_utils.py  c.py  cards_list.py  center_section.py  config.py  config_manager.py  configs.py  deprecated_digit_input.vue  dropdown.py  edit_modal.py  fdsasection_manager.py  file.py  file_drop_card.py  file_drop_card_multi.py  file_drop_multi_card.py  hello.py  helpers.py  jellyfin_utils.py  keyboard.py  mycard2.vue  (+35 more)
archive/cross_filter/: dataframe.py  select.vue
archive/dash/: initial.py
archive/login/: LoginComp.vue
archive/old_shared_components/: chip.vue  popover.vue  snackbar.vue  sort_controls.py  stats_display.py
archive/old_source_code/: clip.py  configs.py  crud.py  data_generator.py  frame_analyzer.py  live_stream_video.py  main.py  models.py  opencv_functions.py  plex_functions.py  programming_notes.txt  requirements.txt  results.txt  routers.py  schemas.py  source_data.py  topic.py  (+6 more)
db/: hmtc-dbpyfile.db  hmtc-dev.db  hmtc.db
hmtc/: admin_views.py  app.py  app2.py  bugs.txt  celery_app.py  db.py  decorators.py  exceptions.py  main.py  models.py  old_app.py  real_world_tests.py  router.py  routes.py  sandbox.py  slow_funcs.py  solara_test.py  store.py
migrations/: 001_initial_migration.py  001_my_first_migration.py  002_db_migration.py
notebooks/: database.json  dataclasses.ipynb  plotly.ipynb  plotly2.ipynb
tests/: conftest.py  helpers.py  old_conftest.py  old_conftest2.py  test_albums.py  test_birds.py  test_db.py  test_file_interface.py  test_image_editor.py  test_image_extractor.py  test_image_manager.py  test_jellyfin_functions.py  test_logging.py  test_models.py  test_schemas.py  test_section.py  test_solara_no_browser.py  test_solara_no_browser.pyold  test_solara_with_browser.py  test_superchat_ripper.py  test_superchat_segments.py  test_topics.py  test_tracks.py  test_utils.py  test_videos.py
(+695 files in other folders)
