[project]
name = "hmtc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.13",
    "celery>=5.4.0",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.0",
    "flask-sock>=0.7.0",
    "flask-socketio>=5.5.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "mutagen>=1.47.0",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "peewee>=3.17.8",
    "peewee-migrate>=1.13.0",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.1",
    "rq>=2.1.0",
    "scikit-image>=0.25.1",
    "simple-websocket>=1.1.0",
    "solara>=1.44.0",
    "solara-server>=1.44.0",
    "srt>=3.5.3",
    "thefuzz>=0.22.1",
    "websockets>=14.2",
    "yt-dlp>=2025.1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
